# wnft

./: .gitignore  Anchor.toml  Cargo.toml  Readme.md  package.json  pnpm-lock.yaml
libs/anchor-mpl/: Cargo.toml
programs/wnft/: Cargo.toml
programs/wnft-collection/: Cargo.toml
programs/wnft-collection/src/: lib.rs  state.rs
programs/wnft-collection/src/instructions/: create_root.rs  create_wnftc_tree.rs  mint_wnft.rs  mod.rs  set_collection.rs
programs/wnft/src/: error.rs  lib.rs  state.rs
programs/wnft/src/instructions/: approve_by_compressed_nft.rs  approve_by_key.rs  close_transaction_model.rs  create_transaction_model.rs  delete_instruction.rs  execute_instructions.rs  execute_transaction_model.rs  insert_instruction.rs  mod.rs
tests/: wnft.ts
