[package]
name = "anchor-mpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.28.0"
mpl-token-metadata = { version = "2.0.0-beta.1", features = ["no-entrypoint"] }
solana-program = "1.16.8"
