[package]
name = "wnft-collection"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wnft_collection"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-mpl = { version = "0.1.0", path = "../../libs/anchor-mpl" }
anchor-spl = "0.28.0"
mpl-bubblegum = { version = "0.10.1", features = ["cpi"] }
mpl-token-metadata = { version = "2.0.0-beta.1", features = ["no-entrypoint"] }
solana-program = "1.16.8"
spl-account-compression = { version = "0.2.0", features = ["cpi"] }
